# int_crush_converter

./: .gitignore  LICENSE  README.md  pyproject.toml
converter/: __init__.py  __main__.py  benchmark.py  benchmark_cli.py  calibration_io.py  cli.py  config.py  dlr.py  gptq.py  gptq_triton.py  greedy.py  ldlq.py  ldlq_triton.py  log.py  packing.py  permuquant.py  pipeline.py  piso.py  piso_triton.py  rotation.py  rounding.py  scales.py  smoothquant.py  smoothrot.py  svd.py  types.py
tests/: conftest.py  test_cli.py  test_end_to_end.py  test_gptq.py  test_gptq_triton.py  test_greedy_triton.py  test_int8_shapes.py  test_ldlq.py  test_packing.py  test_progress_callback.py  test_regression_guards.py  test_rotation.py  test_scale_clipping.py  test_scales.py  test_types.py
tests/gpu/: test_ldlq_compile.py  test_ldlq_triton.py  test_piso_triton.py
tests/integration/: test_benchmark_cli.py  test_convrot_pipeline.py  test_gptq_integration.py  test_logging_isolation.py  test_method_matrix.py  test_permuquant_block_diag.py  test_pipeline.py  test_pipeline_errors.py  test_quality_report.py  test_seed_reproducibility.py  test_smoothquant_pipeline.py
tests/theory/: test_block_diag_equivalence.py  test_convrot_improves_ldlq.py  test_greedy_local_search.py  test_incoherence_reduction.py  test_iterative_ldlq_convergence.py  test_proxy_loss_preservation.py  test_trace_d_bound.py
tests/unit/: test_calibration_io.py  test_dlr_hessian.py  test_gptq_core.py  test_gptq_rtn.py  test_ldlq_core.py  test_ldlq_hessian.py  test_ldlq_iterative.py  test_permuquant_apply.py  test_should_skip.py  (+4 more)
