[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "int-crush-converter"
version = "0.2.0"
description = "INT-Crush: quantization converter with GPTQ, Hadamard rotation, and calibration support"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "safetensors>=0.4.2",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
