[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "int-crush-converter"
version = "0.2.1"
description = "INT-Crush: quantization converter with GPTQ, Hadamard rotation, and calibration support"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "safetensors>=0.4.2",
]

[project.optional-dependencies]
gpu = ["triton>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
int-crush-convert = "converter.cli:main"
int-crush-benchmark = "converter.benchmark_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take >5 seconds (skip in fast CI)",
    "gpu: tests requiring CUDA or Triton (skip on CPU-only runners)",
    "integration: end-to-end or multi-component pipeline tests",
    "stress: repeated-execution tests for non-deterministic failures",
]
addopts = "-m 'not slow and not gpu and not stress'"
